# maestro-platform

./: .env  6_WEEK_ROADMAP_COMPLETE.md  ANALYSIS_INDEX.md  ANALYSIS_SUMMARY.txt  ARCHITECTURAL_STANDARDS.md  ARCHITECTURE_COMPARISON.md  AUTOMATED_CICD_SUMMARY.md  CICD_DEPLOYMENT_GUIDE.md  CICD_IMPROVEMENTS_ROADMAP.md  CICD_INFRASTRUCTURE_CENTRALIZATION.md  DECISION_MATRIX.md  DEMO_DEPLOYMENT_PATH_RECOMMENDATION.md  DEMO_SERVER_MIGRATION_COMPLETE.md  DEPLOYMENT.md  DEPLOYMENT_EXECUTION_SUMMARY.md  DEPLOYMENT_GAP_ANALYSIS.md  DEPLOYMENT_LOCATION_STRATEGY.md  DEPLOYMENT_READINESS_VERIFICATION.md  DOCKER_SETUP_SUMMARY.md  ENIGMA_MERGE_ENHANCEMENTS_ROADMAP.md  ENVIRONMENT_AGNOSTIC_DEPLOYMENT.md  FILE_STRUCTURE.txt  FRONTEND_INTEGRATION_GUIDE.md  GITHUB_INTEGRATION_DEPLOYMENT_PLAN.md  GITHUB_PACKAGES_SETUP.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS_MULTI_AGENT_COLLABORATION.md  INFRASTRUCTURE_ARCHITECTURE_PLAN.md  MAESTRO_VISION.md  MIGRATION_APPROACH_REVISED.md  MIGRATION_COMPLETE.md  MIGRATION_PROGRESS.md  MIGRATION_PROGRESS_UPDATE.md  MONOREPO_STRATEGY.md  MULTI_PHASE_EXECUTION_COMPLETE.md  NEXUS_DEPLOYMENT_STATUS.md  NEXUS_MICROSERVICES_ANALYSIS.md  NEXUS_MIGRATION_COMPLETE.md  NEXUS_QUICK_REFERENCE.md  PARALLEL_EXECUTION_WEEK_5_COMPLETE.md  (+25 more)
discussion-orchestrator/: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  QUICKSTART.md  README.md  docker-compose.dev.yml  docker-compose.yml  example_usage.py  pyproject.toml  requirements.txt  run.sh
discussion-orchestrator/scripts/: docker-build.sh  start.sh  test.sh
discussion-orchestrator/src/: __init__.py  agent_factory.py  autogen_adapter.py  config.py  context.py  discussion_manager.py  discussion_protocols.py  main.py  models.py
discussion-orchestrator/tests/: .gitignore
execution-platform/: .env.example  API_SPECIFICATION.md  COMPREHENSIVE_E2E_TEST_REPORT.md  COMPREHENSIVE_STATUS_AND_NEXT_STEPS.md  COMPREHENSIVE_TEST_RESULTS.md  DOCUMENTATION_INDEX.md  Dockerfile  EXECUTION_PLATFORM_MASTER_INDEX.md  FINAL_COMPLETE_WORKFLOW_SUMMARY.md  FINAL_HANDOFF.md  INTEGRATION_GUIDE.md  MULTI_AGENT_HUMAN_COLLABORATION_ANALYSIS.md  PROVIDER_COMPARISON_SUMMARY.md  QUICK_REFERENCE.md  QUICK_STATUS.md  QUICK_SUMMARY_MULTI_AGENT_HUMAN.md  README.md  README_QUICKSTART.txt  REAL_PROVIDER_COMPARISON_ANALYSIS.md  REVIEW_AND_TEST_COMPLETE.md  SESSION_COMPLETE.md  SESSION_REVIEW_AND_NEXT_STEPS.md  START_HERE.md  TEMPLATE_UPDATE_REQUEST.md  TEST_IMPLEMENTATION_SUMMARY.md  TEST_PLANNER.md  VALIDATION_SUMMARY.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_comprehensive_tests.py  test_complete_workflow.py  test_comprehensive_e2e.py  test_comprehensive_suite.py  test_comprehensive_suite_fixed.py  test_provider_comparison.py  test_real_provider_comparison.py
execution-platform/docs/: CAPABILITIES_MATRIX.md  COMPREHENSIVE_STATUS_AND_NEXT_STEPS.md  CONFIG_SCHEMA.md  COST_TRACKING_DESIGN.md  EXECUTION_TRACKER.md  LIBRARY_ALIGNMENT.md  MASTER_EXECUTION_DOCUMENT.md  PERSONA_PROVIDER_OVERRIDES.md  POETRY_USAGE.md  PROVIDER_AGNOSTIC_MASTER_INDEX.md  PROVIDER_AGNOSTIC_SDK_AND_GATEWAY_PLAN.md  ROADMAP.md  SPI_SPEC.md  STREAMING_PROTOCOL.md  TESTING_STRATEGY.md  TOOL_CALLING_SPEC.md  capabilities.yaml  persona_policy.yaml
execution-platform/execution_platform/: README.md  __init__.py  client.py  config.py  router.py  telemetry.py
execution-platform/scripts/: run_validation.sh  start.sh  start_gateway.sh
execution-platform/test-results/: fallback-report.json
execution-platform/tests/: conftest.py  quality_fabric_client.py  test_adapters_unit.py  test_budgets.py  test_capabilities.py  test_capability_requirements.py  test_chat_accepts_tools.py  test_client_sdk.py  test_cost_and_health.py  test_e2e_workflows.py  test_embeddings.py  test_invalid_payload.py  test_l0_contract.py  test_l1_tool_call_conformance.py  test_live_providers.py  test_openai_disabled_path.py  test_provider_override.py  test_quality_fabric_integration.py  test_rate_limit.py  test_router.py  test_router_auto.py  test_spi.py  test_sse_structure.py  test_tool_error_flow.py  test_tool_ordering.py  test_tool_sandbox.py  test_tracing_flag.py  test_usage_event.py
llm-router/: .dockerignore  DEPLOYMENT.md  Dockerfile  README.md  claude_code_sdk.py  pyproject.toml
llm-router/config/: capabilities.yaml  (+1 more)
maestro-hive/: .acc_cache.json  .coverage  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ACC_AUDIT_TEST_RESULTS.md  ACC_AUDIT_TEST_SUITE_SUMMARY.md  ACC_COUPLING_COMPLEXITY_SUMMARY.md  ACC_COUPLING_COMPLEXITY_TEST_RESULTS.md  ACC_SUPPRESSION_SYSTEM_TEST_SUMMARY.md  AGENT3_CRITICAL_ANALYSIS.md  AGENT3_DAG_DELIVERABLES.md  AGENT3_DAG_MIGRATION_GUIDE.md  AGENT3_DAG_WORKFLOW_ARCHITECTURE.md  AGENT3_SDK_FEEDBACK_ACTION_PLAN.md  AGENT3_WORKFLOW_CONTRACT_GAPS.md  AI_ORCHESTRATION_EVOLUTION_PLAN.md  AI_UNIVERSE_VISION.md  ALL_FEATURES_COMPLETE.md  API_INTEGRATION_GUIDE.md  AUTOGEN_COMPLETE_INDEX.md  AUTOGEN_CONTEXT_SHARING_ANALYSIS.md  AUTOGEN_FEATURES_EXAMPLES.md  AUTOGEN_FEATURES_SUMMARY.md  AUTOGEN_WORKFLOW_PATTERNS_ANALYSIS.md  AUTOMATED_WORKFLOW_SUMMARY.md  AUTO_HEAL_FAILURES.md  AUTO_REVIEW_COMPLETE.md  BATCH5_DAG_SYSTEM_ANALYSIS_CORRECTED.md  BATCH5_GAP_IMPACT_ON_DAG.md  BATCH5_PROGRESS_SUMMARY.md  BATCH5_QA_ENHANCEMENT_COMPLETE_SUMMARY.md  BATCH5_VALIDATION_FIX_SUMMARY.md  BATCH5_WORKFLOW_SYSTEM_ANALYSIS.md  BDV_AUDIT_TEST_SUITE_SUMMARY.md  BDV_FLAKE_DETECTION_SUMMARY.md  BDV_OPENAPI_TO_GHERKIN_SUMMARY.md  BDV_PHASE_2A_SUITE_10_SUMMARY.md  BUG_FIXES_SUMMARY.md  (+591 more)
shared/: .gitignore  .pre-commit-config.yaml  AUTONOMOUS_DISCUSSION_SUMMARY.md  CLAUDE_TEAM_SDK_SUMMARY.md  DOMAIN_TEAM_EXAMPLES_SUMMARY.md  ECOSYSTEM_INTEGRATION.md  GIT_SETUP_COMPLETE.md  GIT_SETUP_INSTRUCTIONS.md  LIBRARY_AUDIT_REPORT.md  LIBRARY_IMPROVEMENTS_COMPLETE.md  MIGRATION_ROADMAP.md  Makefile  NEXUS_MIGRATION_STATUS.md  README.md  SERVER_STATUS_REPORT.md  SHARED_LIBRARIES_FIXES.md  publish-all.sh  publish-quality-fabric-deps.sh  publish-to-nexus.sh  pyproject.toml  services_registry.json  upload-to-nexus-components-api.sh
(+3473 files in other folders)
