[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "maestro-shared"
version = "1.0.0"
description = "Shared libraries for the MAESTRO Enterprise Ecosystem"
authors = [
    {name = "MAESTRO Team", email = "team@maestro.ai"}
]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["maestro", "shared", "libraries", "enterprise"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# Core dependencies (will be inherited by all packages) - Updated to latest versions
structlog = "^24.4.0"
pydantic = "^2.11.9"
pydantic-settings = "^2.11.0"
fastapi = "^0.115.14"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
sqlalchemy = "^2.0.43"
alembic = "^1.16.5"
asyncpg = "^0.30.0"
redis = "^5.3.1"
prometheus-client = "^0.21.1"
opentelemetry-api = "^1.29.0"
opentelemetry-sdk = "^1.29.0"
opentelemetry-instrumentation = "^0.50b0"
utcp = "^1.0.4"
utcp-http = "^1.0.5"
anthropic = "^0.69.0"
tenacity = "^9.1.2"
aiocache = "^0.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.3.0"
black = "^25.9.0"
isort = "^5.13.2"
mypy = "^1.18.2"
ruff = "^0.13.2"
pre-commit = "^4.3.0"
bandit = "^1.8.6"
safety = "^3.6.2"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-material = "^0.0.36"
sphinx-autodoc-typehints = "^2.5.0"

# Code quality configuration
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=packages --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
pythonpath = ["packages"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["packages"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]