[tool.poetry]
name = "maestro-ml"
version = "0.1.0"
description = "Self-aware ML development platform with meta-learning capabilities"
authors = ["Maestro ML Team"]
readme = "README.md"
packages = [{include = "maestro_ml"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
alembic = "^1.12.1"
aiosqlite = "^0.19.0"
redis = "^5.0.1"
aioredis = "^2.0.1"
boto3 = "^1.34.0"
aioboto3 = "^12.1.0"
mlflow = "^2.9.2"
dvc = {extras = ["s3"], version = "^3.30.0"}
prometheus-client = "^0.19.0"
httpx = "^0.25.2"
aiohttp = "^3.9.1"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
# OpenTelemetry for distributed tracing
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"
opentelemetry-instrumentation-sqlalchemy = "^0.42b0"
opentelemetry-instrumentation-httpx = "^0.42b0"
opentelemetry-instrumentation-redis = "^0.42b0"
opentelemetry-exporter-jaeger = "^1.21.0"
opentelemetry-exporter-jaeger-thrift = "^1.21.0"
# Authentication dependencies
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
bcrypt = "^4.1.2"
psycopg2-binary = "^2.9.10"
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pytest-cov = "^4.1.0"
httpx = "^0.25.2"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=maestro_ml --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
