[tool.poetry]
name = "maestro-automation-service"
version = "1.0.0"
description = "Maestro Platform - Continuous Auto-Repair Service (CARS)"
authors = ["Maestro Platform Team"]
readme = "README.md"
packages = [{include = "automation_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# Web Framework
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"

# Async & Redis
asyncio = "^3.4.3"
redis = {extras = ["hiredis"], version = "^5.0.0"}
aiofiles = "^23.0.0"

# Maestro Packages (from Nexus)
# maestro-test-healer = "^0.1.0"  # TODO: Publish to Nexus

# Database (optional for now)
# psycopg2-binary = "^2.9.9"
# sqlalchemy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[tool.poetry.scripts]
cars = "automation_service.main:main"

[[tool.poetry.source]]
name = "nexus"
url = "http://localhost:28081/repository/pypi-hosted/simple"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
