[project]
name = "maestro-rate-limiting"
version = "1.0.0"
description = "Shared rate limiting package for Maestro platform services"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "redis>=4.0.0",
    "fastapi>=0.100.0",
    "starlette>=0.27.0",
]

[project.optional-dependencies]
metrics = ["prometheus-client>=0.17.0"]
all = ["prometheus-client>=0.17.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
